<resources>
    <string name="app_name">AppToanCau</string>
    <string name="text_TieuDe">Imformation Form</string>
    <string name="hint_HoTen">Type FullName</string>
    <string name="hint_email">Type Email</string>
    <string name="hint_DienThoai">Type Phone Number</string>
    <string name="text_XacNhan">Confirm</string>
    <string name="txt_chaoban">Hello</string>
    <string name="txtEmail">Email</string>
    <string name="txt_SoDt">Phone Number</string>

</resources>
